# mpp

./: .gitignore  CMakeLists.txt  README.md  build_android.sh  build_linux.sh  build_linux_nvidia.sh  test_ion.sh
mpp/: CMakeLists.txt  mpp.cpp  rvpu_api.cpp
mpp/base/: mpp_buffer.cpp
mpp/hal/: CMakeLists.txt
mpp/hal/common/h264/: CMakeLists.txt  hal_h264e_api.c
mpp/hal/rkdec/h264d/: CMakeLists.txt  hal_h264d_api.c
mpp/hal/rvpu/: CMakeLists.txt  README.md  rvpu_api.h  rvpu_primitive.c  rvpu_primitive.h
mpp/hal/rvpu/h264-stub/: CMakeLists.txt  hal_h264d_stub.c  hal_h264d_stub.h  hal_h264e_stub.c
mpp/hal/rvpu/h264e-stub/: CMakeLists.txt  hal_h264e_stub.c  hal_h264e_stub.h
mpp/hal/rvpu/jpege/: CMakeLists.txt  hal_jpege_stub.c  hal_jpege_stub.h
mpp/hal/rvpu/nvidia/: CMakeLists.txt  NvEncoder.cpp  NvEncoder.h  NvEncoderCuda.cpp  NvEncoderOutputInVidMemCuda.cpp  NvEncoderOutputInVidMemCuda.h  README.md  hal_h264d_nv.cc  hal_h264d_nv.h  hal_h264e_nv.c  hal_h264e_nv.cc  hal_h264e_nv.h
mpp/hal/rvpu/x264/: CMakeLists.txt  hal_h264e_x264.c  hal_h264e_x264.h
mpp/hal/rvpu/x264e/: CMakeLists.txt  hal_h264e_x264.c
mpp/hal/vpu/jpege/: CMakeLists.txt
osal/allocator/: allocator_ion.c
